--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@ body {
 
 .header {
     margin-bottom: 40px;
-    box-shadow: 0px 2px 20px rgba(0, 0, 0, .4);
+    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.4);
     background-color: white;
     padding: 30px 250px 3px;
 }
 
 .header__title {
     margin: 0 0 20px;
-    color: rgba(0, 0, 0, .85);
+    color: rgba(0, 0, 0, 0.85);
 }
 
 .main {
@@ -25,15 +25,15 @@ body {
     font-size: large;
 }
 
-.main-container{
+.main-container {
 }
 
 .canvas {
     display: block;
     margin: 0 auto;
     border-radius: 30px;
-    max-width: 80%;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, .7);
+    max-width: 50%;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.7);
 }
 
 .download-button {
@@ -42,15 +42,15 @@ body {
     border-color: transparent;
     display: inline-flex;
     align-items: center;
-    transition: .2s;
+    transition: 0.2s;
     font-weight: bold;
     font-size: medium;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, .3);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .download-button:hover {
     cursor: pointer;
-    opacity: .7;
+    opacity: 0.7;
 }
 
 .download-button-icon {
