--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,5 @@
 @import url('./styles/button/__icon/button__icon.css');
 
 @import url('./styles/input/input.css');
+
+@import url('./styles/footer/footer.css');
