--- a/src/styles/footer/footer.css
+++ b/src/styles/footer/footer.css
@@ -1,19 +1,19 @@
 .footer {
     margin-top: 30px;
     max-width: 880px;
-    margin: 30px auto;
+    padding: 0 30vw
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
     .footer {
-        margin: 30px 15.625%;
+        padding: 0 20vw;
     }
 }
 
 @media screen and (max-width: 424px) {
     .footer {
         max-width: 282px;
-        margin: 30px auto;
+        padding: 0 20vw
     }
 }
 
