фикс шрифта, фикс паддинга футера, добавлен марджин иконкам на кнопках

--- a/src/styles/footer/footer.css
+++ b/src/styles/footer/footer.css
@@ -13,7 +13,7 @@
 @media screen and (max-width: 424px) {
     .footer {
         max-width: 282px;
-        padding: 0 20vw;
+        padding: 0 50px;
     }
 }
 
