чутка улучшен код

--- a/src/fonts/Roboto.css
+++ b/src/fonts/Roboto.css
@@ -1,29 +1,27 @@
 @font-face {
-	font-family: 'Roboto';
-	font-style:  normal;
-	font-weight: 400;
-	src: url("Roboto-Regular.ttf")
-  }
-  
-  @font-face {
-	font-family: 'Roboto';
-	font-style:  normal;
-	font-weight: 500;
-	src: url("Roboto-Medium.ttf");
-  }
-  
-  @font-face {
-	font-family: 'Roboto';
-	font-style:  normal;
-	font-weight: 700;
-	src: url("Roboto-Bold.ttf");
-  }
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('Roboto-Regular.ttf');
+}
 
-  @font-face {
-	font-family: 'Roboto';
-	font-style:  normal;
-	font-weight: 900;
-	src: url("Roboto-Black.ttf");
-  }
-  
-  
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: url('Roboto-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: url('Roboto-Bold.ttf');
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    src: url('Roboto-Black.ttf');
+}
